--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,45 @@
  body
  {
-    overflow-x:hidden;
+   overflow-x:hidden;
  }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+.navbar-header{
+    border:none !important;
+}
+.navbar-collapse
+{
+  border:none !important;
+}
+.navbar-toggle
+{
+  border:none !important;
+  background-color:transparent;
+}
  .navbar
     {
     	background-color:#F4F7FA !important;
     	border:none !important;
     	border-radius:0px;
+      overflow:hidden;
     	min-height:60px !important;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
@@ -35,6 +66,11 @@
         color:#ffffff;
     }
     .container1
+    {
+        margin-left:5%;
+        margin-right:5%;
+    }
+    .container2
     {
         margin-left:5%;
         margin-right:5%;
@@ -70,11 +106,21 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
 }
+.checked {
+    color: orange;
+}
 .about, .why
 {
     padding-top:60px;
           font-family: 'Open Sans', sans-serif;
     
+}
+.display
+{
+   font-family: 'Open Sans', sans-serif;
+    max-height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
     .offers
     {
@@ -97,12 +143,16 @@
           font-size:20px;
           color:#00008b;
     }
-    .offers p
+    .offers p, .livedata p, .display p 
     {
           font-family: 'Open Sans', sans-serif;
           font-weight:700;
           line-height:25px;
 
+    }
+    .livedata p
+    {
+      line-height:30px;
     }
     .split p
     {
@@ -124,6 +174,11 @@
         background-color:#ffffff !important;
         padding:10px;
         margin-top:200px ;
+    }
+    .taxi
+    {
+      width:170px;
+      margin-top:-10px;
     }
     .top
     {
@@ -298,7 +353,13 @@ section p{font-family:'Lato', sans-serif;}
     cursor: pointer;
 }
 
-
+ #map {
+       height:100vh; 
+       max-width:100vw;
+       position:fixed;
+          box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+      }
+  
 /*slider*/
 /* carousel */
 .media-carousel 
@@ -372,6 +433,10 @@ section p{font-family:'Lato', sans-serif;}
 }
 
 @media screen and (max-width: 600px) {
+  body
+  {
+    overflow-x:hidden;
+  }
  .about h2, .why h2, .split h2
     {
          font-family: 'Open Sans', sans-serif;
@@ -381,4 +446,19 @@ section p{font-family:'Lato', sans-serif;}
           color:#000000; 
     }
     .footer-title { font-size: 18px;  }
+    
+   .top
+    {
+        padding-top:50px;
+    }
+    .tabtop li a:last-child {
+    padding: 10px 15px;
+}
+.about p, .why p {
+    font-family: 'Open Sans', sans-serif;
+    line-height: 30px;
+    font-size: 14px;
+    letter-spacing: 0.6px;
+}
+
 }
