--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@
 }
  .navbar
     {
-    	background-color:#F4F7FA !important;
+    	background-color:#FFFFFF !important;
     	border:none !important;
     	border-radius:0px;
       overflow:hidden;
