--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,8 +53,8 @@
     }
     .navbar-nav li a
     {
-        margin:5px 15px;
-        font-size:15px;
+        margin:5px 12px;
+        font-size:16px;
         margin-top:5px;
         color:#2E3F5D !important;
         font-weight:700;
@@ -108,7 +108,24 @@
     color:#ffffff;
     letter-spacing: 0.5px;
 }
-    .right
+.offero
+{
+    border-left:5px solid #CDDC39;
+    background-color:#ffffff;
+}
+.offero h5
+{
+    font-family: 'Open Sans', sans-serif;
+    font-size:18px;
+    padding:10px;
+    opacity:0.9;
+    margin-top:20px;
+    line-height:30px;
+    font-weight:500;
+    color:#000000;
+    letter-spacing: 0.5px;
+}
+.right
     {
         border-right:2px solid #f1f1f1;
     }
@@ -142,6 +159,67 @@
     max-height: 100vh;
     overflow-y: scroll;
     overflow-x: hidden;
+}
+
+
+.infopad
+{
+    background-color:#ffffff;
+    color:#000000;
+    padding:10px;
+    font-size:18px;
+    text-align:center;
+    letter-spacing:0.5px;
+    font-family: 'Open Sans', sans-serif;
+
+}
+.quoter label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size:16px;
+     font-family: 'Open Sans', sans-serif;
+}
+.inspad
+{
+    background-color:#6897bb;
+    color:#ffffff;
+    padding:6px;
+    font-size:12px;
+    letter-spacing:0.5px;
+     font-family: 'Open Sans', sans-serif;
+
+}
+.info
+{
+    margin-top:20px;
+}
+.infotab p
+{
+    font-size:15px !important;
+    text-align: left !important;
+    font-weight:400 !important;
+    line-height:25px;}
+.backcolor
+{
+    padding:2px;
+    background-color:#cddc39 !important;
+}
+.infotab
+{
+    padding:10px 20px;
+}
+.infotab table td:first-child
+{
+    font-weight:700;
+}
+.infotab table td
+{
+    padding:8px 10px;
+      font-size:14px;
+    font-weight:500;
+      font-family: 'Open Sans', sans-serif;
 }
     .offers
     {
@@ -205,6 +283,16 @@
     {
         padding-top:100px;
     }
+.topping
+{
+    margin-top:70px;
+}
+
+.over
+{
+    max-height:100vh;
+    overflow-y: scroll;
+}
      .topper
      {
         padding-top:50px;
@@ -214,6 +302,11 @@
  border:1px solid #f4f4f4;
     cursor:pointer;  
     padding:10px; 
+}
+.small
+{
+    max-width:200px;
+    width:100%;
 }
     input[type=text] {
         width:100%;
@@ -272,15 +365,32 @@
     margin-top: 10px;
     border: 1px solid transparent;
    background-color: #E2E2E2;
-    border-radius: 2px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     height: 40px;
     outline: none;
 font-family: 'Open Sans', sans-serif;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
-
+.fa-arrow-left
+{
+   font-size:28px !important;
+       font-family: 'Open Sans', sans-serif;
+    font-weight:600;
+    color:#000000;
+}
+.centext
+{
+    margin-top:10px;
+   font-size:25px !important;
+       font-family: 'Open Sans', sans-serif;
+    font-weight:600; 
+    letter-spacing: 0.8px;
+    color:#000;
+}
+.topit
+    {
+        margin-top:20px !important;
+    }
 .selectit {
     width:100%;
     min-height:45px;
@@ -295,14 +405,46 @@ font-family: 'Open Sans', sans-serif;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 100%;
-  padding:30px;
-  border-radius:8px;
+  padding:20px 30px;
+  border-radius:6px;
   background-color:#ffffff!important;
+}
+.quoter{
+    border:1px solid #cccccc;
+  width: 100%;
+    margin-top:5px;
+  padding:10px 20px;
+  background-color:#ffffff;
+}
+.quoter:hover
+{
+     transition: 0.3s;
+    box-shadow: 12px 15px 20px 0px rgba(46,61,73,0.15);     
+}
+.topping
+{
+    margin-top: 80px;
+}
+.quoter h3
+{
+   font-family: 'Open Sans', sans-serif;
+    font-size:20px;
+    font-weight:700;
+    text-align: center;
+}
+.quoter p
+{
+   font-family: 'Open Sans', sans-serif;
+    font-size:16px;
+    font-weight:600;
+    text-align: center;
+    color:#000000;
 }
  .cardwhite {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   background-color:#ffffff!important;
 }
+
 .cardws {
   
   transition: 0.3s;
@@ -351,6 +493,10 @@ font-family: 'Open Sans', sans-serif;
     margin: 6px 4px;
     cursor: pointer;
    font-family: 'Open Sans', sans-serif;
+}
+.toping
+{
+    margin-top:20px;
 }
 .pad
 {
@@ -407,10 +553,7 @@ section p{font-family:'Lato', sans-serif;}
 }
 
  #map {
-       height:100vh; 
-       max-width:100vw;
-       position:fixed;
-          box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+      max-height:100vh;
       }
   
 /*slider*/
@@ -499,7 +642,10 @@ section p{font-family:'Lato', sans-serif;}
           color:#000000; 
     }
     .footer-title { font-size: 18px;  }
-    
+.quote>.row {
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
    .top
     {
         padding-top:50px;
@@ -513,6 +659,13 @@ section p{font-family:'Lato', sans-serif;}
     font-size: 14px;
     letter-spacing: 0.6px;
 }
+    .buttonexplore {
+        font-size:18px;
+    }
+    .main
+    {
+        min-height:100vh;
+    }
     .main p
 {
   font-family: 'Open Sans', sans-serif;
