--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -510,7 +510,7 @@ font-family: 'Open Sans', sans-serif;
 .content-quality p{margin-left:10px;font-family:'Open Sans', sans-serif;font-size:14px;font-weight:600;line-height:17px;}
 .content-quality p span{display:block;}
 .tabtop li a{font-family:'Lato', sans-serif;font-weight:500;color:#1b2834;border-radius:0px;margin-right:22.008px;!important;}
-.tabtop .active a:before{content:"♦";position:absolute;top:15px;left:82px;color:#CDDC39;font-size:30px;}
+.tabtop .active a:before{position:absolute;top:15px;left:82px;color:#CDDC39;font-size:30px;}
 .tabtop li a:hover{color:#000000 !important;text-decoration:none;}
 .tabtop .active a:hover{color:#000000 !important;}
 .tabtop .active a{background-color:#CDDC39 !important;color:#000000 !important;}
