--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,7 +405,6 @@ font-family: 'Open Sans', sans-serif;
 }
 
     .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 100%;
   padding:20px 30px;
@@ -689,7 +688,7 @@ section p{font-family:'Lato', sans-serif;}
 }
    .top
     {
-        padding-top:100px;
+        padding-top:50px;
     }
     .tabtop li a:last-child {
     padding: 10px 15px;
@@ -755,5 +754,13 @@ section p{font-family:'Lato', sans-serif;}
     line-height:19px;
     color:#ffffff;  
 }
+  .main
+    {
+        margin: 0 !important;
+      max-height:auto;
+        background-image: none;
+    background-color: #ffffff !important;
+
+    }
 
 }
