--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,8 @@
     	border-radius:0px;
       overflow:hidden;
     	min-height:60px !important;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
     .navbar-left
     {
@@ -86,7 +87,10 @@
     background-size: cover !important;
 
     }
-
+.about
+{
+    min-height:100vh;
+}
 .main h1
 {
   font-family: 'Open Sans', sans-serif;
@@ -358,7 +362,7 @@
     padding: 12px 20px;
          min-height:45px;
     margin: 8px 0;
-    min-height:150px;
+    min-height:100px;
         color:#000000;
     box-sizing: border-box;
     background-color: #E2E2E2;
@@ -510,10 +514,12 @@ font-family: 'Open Sans', sans-serif;
 .content-quality p span{display:block;}
 .tabtop li a{font-family:'Lato', sans-serif;font-weight:500;color:#1b2834;border-radius:0px;margin-right:22.008px;!important;}
 .tabtop .active a:before{position:absolute;top:15px;left:82px;color:#CDDC39;font-size:30px;}
+.other {background-color:#e2e2e2;font-size:20px !important;margin:0px 2px;border-top-left-radius:4px;border-top-right-radius:4px;border:none !important;}
 .tabtop li a:hover{color:#000000 !important;text-decoration:none;}
 .tabtop .active a:hover{color:#000000 !important;}
 .tabtop .active a{background-color:#CDDC39 !important;color:#000000 !important;}
 .margin-tops{margin-top:30px;}
+.tab-content{Background-color:#ffffff;}
 .tabtop li a:last-child{padding:10px 22px;}
 .thbada{padding:10px 28px !important;}
 section p{font-family:'Lato', sans-serif;}
