--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,10 @@
    padding: 0 !important;
    margin: 0 !important;
 }
+.regi
+{
+ border:1px solid #eee;
+}
 .split
 {
     border:1px solid #f4f4f4;
