--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@
 }
  .navbar
     {
-    	background-color:#000000 !important;
+    	background-color:#ffffff !important;
     	border:none !important;
     	border-radius:0px;
       overflow:hidden;
@@ -57,7 +57,7 @@
         margin:5px 12px;
         font-size:16px;
         margin-top:5px;
-        color:#ffffff !important;
+        color:#000 !important;
         font-weight:700;
         line-height: 20px;
           font-family: 'Open Sans', sans-serif;
